# paper_trans

./: .env.example  .env.prod.example  .gitignore  HIDDEN_FEATURES.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  locustfile.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  run_server.ps1
backend/alembic/: README  env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  cost.py  glossaries.py  orders.py  quotas.py  router.py  tasks.py  users.py
backend/app/core/: config.py  database.py  logging.py  rate_limit.py  redis_client.py  security.py
backend/app/models/: __init__.py  glossary.py  guid.py  order.py  quota.py  task.py  user.py
backend/app/schemas/: __init__.py  auth.py  glossary.py  order.py  quota.py  task.py  user.py
backend/app/seed_glossary/: cs_ai.csv
backend/app/services/: auth_service.py  cost_monitor_service.py  glossary_seed.py  glossary_service.py  llm_service.py  markdown_service.py  notification_service.py  pdf_blocks.py  quota_service.py  storage_service.py  structure_service.py  task_service.py
backend/app/workers/: __init__.py  progress.py  scheduler.py  tasks.py
backend/scripts/eval/: HUMAN_REVIEW_WORKFLOW.md  MODELS_CONFIG.md  README.md  USAGE.md  ab_test_resolver.py  benchmark.py  business_review.py  download_papers.py  models.example.json
backend/scripts/eval/data/: terms.example.json
backend/tests/: conftest.py  test_api_health.py  test_auth.py  test_glossary.py  test_services.py  test_tasks.py
e2e/: auth.spec.ts  (+4 more)
(+77 files in other folders)
